--- a/final.tex
+++ b/final.tex
@@ -312,6 +312,6 @@ En este trabajo dimos una introducci\'on al \'area de \emph{computational learni
 A trav\'es de un ejemplo de algoritmo PAC vimos la forma en que las definiciones te\'oricas pueden ser puestas en pr\'actica. Finalmente, introdujimos algunas variantes de la definci\'on original que permiten extenderla para distintos escenarios y que fueron abriendo nuevas preguntas de investigaci\'on en el \'area.
 
 \bibliographystyle{abbrv}
-\bibliography{zoterolib}
+\bibliography{references}
 
 \end{document}
